--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.2",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "socket.io": "^4.7.4"
   }
 }
