--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.1.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "zustand": "^4.5.1"
   }
 }
