Analytics added (test)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server": "nodemon backend/server.js",
     "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "watch": "watch 'npm run build' ./frontend"
   },
   "type": "module",
   "keywords": [],
@@ -22,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "socket.io": "^4.7.4",
+    "watch": "^1.0.2",
     "zustand": "^4.5.1"
   }
 }
